--- a/web/styles.scss
+++ b/web/styles.scss
@@ -1,11 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
-html, body {
-  width: 100%;
-  height: 100%;
+* {
   margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
+
+html {
+  font-family: ui-monospace, sans-serif;
+  color: #FAFAFA;
+}
+
+body {
+  margin: 0;
+  background: #121212;
 }
 
 #output {
