Use angular dart

--- a/web/styles.scss
+++ b/web/styles.scss
@@ -6,14 +6,13 @@
 html {
   font-family: ui-monospace, sans-serif;
   color: #FAFAFA;
+  font-size: 62.5%;
 }
 
 body {
   margin: 0;
   background: #121212;
-}
-
-#output {
   padding: 20px;
+  font-size: 2.3rem;
   text-align: center;
 }
