--- a/web/styles.scss
+++ b/web/styles.scss
@@ -11,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  background: #121212;
+  hsl(216, 28%, 7%);
   padding: 20px;
   font-size: 2.3rem;
   text-align: center;
