--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -1,6 +1,3 @@
-.selected {
-  background: hsl(216, 28%, 19%);
-}
 
 .bats {
   margin: 0 0 2em 0;
@@ -11,14 +8,18 @@
   li {
     cursor: pointer;
     position: relative;
-    left: 0;
     background: hsl(216, 28%, 10%);
     margin: 0.7em;
+    line-height: 0;
     border-radius: 0.4em;
     &:hover {
       background: hsl(216, 28%, 21%);
       left: 0.5em;
     }
+  }
+  li.selected {
+    background: hsl(216, 28%, 21%);
+    left: 0;
   }
   li.selected:hover {
     color: hsl(0, 0%, 95%);
@@ -35,7 +36,6 @@
     padding: 0.7em 1.5em;
     background: hsl(216, 28%, 54%);
     line-height: 2em;
-    height: 100%;
     border-radius: 0.8em 0 0 0.8em;
   }
 }
