--- a/web/styles.scss
+++ b/web/styles.scss
@@ -16,7 +16,11 @@ body {
   font-size: 2.3rem;
 }
 
-h1, h2 {
+a {
+  text-decoration: none;
+}
+
+h1, h2, h3 {
   line-height: 2;
   text-align: center;
 }
@@ -27,4 +31,8 @@ h1 {
 
 h2 {
   font-size: 6rem;
+}
+
+h4 {
+  position: relative;
 }
