--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -1,19 +1,15 @@
-nav a {
-  padding: 5px 10px;
-  text-decoration: none;
-  margin-top: 10px;
-  display: inline-block;
-  background: #eee;
-  border-radius: 4px;
-  &:visited,
-  &:link {
-    color: #607D8B;
-  }
-  &:hover {
-    color: #039be5;
-    background: #CFD8DC;
-  }
-  &.active {
-    color: #039be5;
+nav {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 1.5rem 0;
+  a {
+    display: block;
+    padding: 0.5rem 1rem;
+    margin: 1rem;
+    background: #eee;
+    border-radius: 0.4rem;
+    &.active {
+      color: #039be5;
+    }
   }
 }
