--- a/lib/src/bat_list_component.scss
+++ b/lib/src/bat_list_component.scss
@@ -1,37 +1,27 @@
 
 .bats {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
   width: 100%;
-  font-size: 3.5rem;
+  list-style-type: none;
+  font-size: 5rem;
+  padding: 0;
   li {
+    display: block;
     cursor: pointer;
-    position: relative;
     background: hsl(216, 28%, 10%);
-    margin: 0.7em;
-    line-height: 0;
-    border-radius: 0.4em;
+    border-radius: 0.4rem;
+    padding: 1rem 1rem;
     &:hover {
       background: hsl(216, 28%, 21%);
     }
   }
   li.selected {
     background: hsl(216, 28%, 21%);
-    left: 0;
-  }
-  .text {
-    position: relative;
-    top: -0.03em;
   }
   .badge {
-    display: inline-block;
-    position: relative;
-    font-size: 0.5em;
-    color: hsl(216, 28%, 7%);
-    padding: 0.7em 1.5em;
-    background: hsl(216, 28%, 54%);
-    line-height: 2em;
-    border-radius: 0.8em 0 0 0.8em;
+    font-size: 0.35em;
+    color: hsl(0, 0%, 95%);
   }
 }
