--- a/lib/src/dashboard_component.scss
+++ b/lib/src/dashboard_component.scss
@@ -1,43 +1,20 @@
-[class*='col-'] {
-  float: left;
-  padding: 0 2rem 2rem 0;
-  &:last-of-type {
-    padding-right: 0;
-  }
-}
 
 .grid {
-  margin: 0;
-}
-
-col-1-4 {
-  width: 25%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-size: 7rem;
+  gap: 2rem;
+  margin-top: 1rem;
 }
 
 .module {
   padding: 2rem;
   text-align: center;
-  max-height: 12rem;
-  max-width: 12rem;
   background: #607D8B;
-  border-radius: 0.2rem;
+  border-radius: 0.4rem;
   &:hover {
     background: #EEE;
     cursor: pointer;
     color: #607d8b;
-  }
-  @media (max-width: 600px) {
-    font-size: 1rem;
-    max-height: 7.5em;
-  }
-  @media (max-width: 1024px) {
-    max-width: 6em;
-  }
-}
-
-.grid-pad {
-  padding: 1rem 0;
-  & > [class*='col-']:last-of-type {
-    padding-right: 2rem;
   }
 }
