Add backup fonts

--- a/web/styles.scss
+++ b/web/styles.scss
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-family: ui-monospace, sans-serif;
+  font-family: ui-monospace, "San Francisco", "menlo", monospace;
   color: c.$white;
   font-size: 62.5%;
 }
